# ForgeRunner

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
backend/: config.py  database.py  main.py
backend/engines/: base.py  cleanlab_engine.py  forge_embedder_engine.py  source_checker_engine.py
backend/models/: bucket.py  dataset.py  example.py  review.py  score.py
backend/routers/: buckets.py  dashboard.py  datasets.py  estimator.py  examples.py  export.py  review.py  scoring.py  sources.py
backend/schemas/: bucket.py  dashboard.py  dataset.py  example.py  export.py  review.py  score.py
backend/services/: bucketing.py  export_service.py  ingest.py  review_service.py  scoring_orchestrator.py  stats.py
backend/utils/: jsonl.py  text_extraction.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: buckets.ts  dashboard.ts  datasets.ts  estimator.ts  examples.ts  export.ts  review.ts  scoring.ts  sources.ts
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/pages/: DashboardPage.tsx  DatasetDetailPage.tsx  EstimatorPage.tsx  ExportPage.tsx  ReviewQueuePage.tsx  SourcesPage.tsx  UploadPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
